--- a/src/About.css
+++ b/src/About.css
@@ -1,16 +1,19 @@
 .about__container {
 	max-width: 1200px;
 	margin: 0 auto;
-	margin-top: 144px;
+	display: block;
+	/* margin-top: 144px; */
 }
 
 .about__image {
-	transform: rotate(20deg);
-	max-width: 399px;
-	max-height: 399px;
+	width: 399px;
+	height: 399px;
 	border-radius: 50%;
+	display: block;
 
 	overflow: hidden;
+	transform: rotate(20deg);
+	/* margin-right: 50px; */
 }
 
 .about__image img {
@@ -38,14 +41,17 @@
 .about__content {
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
 }
 
 .image__container {
-	padding: 0 55px;
+	justify-self: center;
 }
 
 .about__info {
 	margin-left: 47px;
+	/* max-width: 600px; */
 }
 
 .about__info button {
@@ -62,23 +68,43 @@
 	color: var(--backgroundcolor);
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 963px) {
 	.about__content {
 		flex-direction: column;
 	}
 
-	.image__container {
+	.about__image {
 		padding: 0;
 		margin-bottom: 30px;
 	}
 
+	.about__info {
+		text-align: center;
+		margin: 0 auto;
+	}
+}
+@media screen and (max-width: 516px) {
 	.about__image {
 		max-width: 303px;
 		max-height: 303px;
+		margin-bottom: 30px;
 	}
 
 	.about__image img {
-		transform: translateX(-99px) translateY(-40px);
+		max-width: 400px;
+		transform: translateX(-43px) translateY(-10px);
+	}
+	/* 
+	.about__image img {
+		max-width: 530px;
+
+		object-fit: contain;
+		transform: translateX(-60px);
+	} */
+}
+@media screen and (max-width: 414px) {
+	.about__content {
+		flex-direction: column;
 	}
 
 	.about__info {
@@ -87,18 +113,19 @@
 	}
 }
 
-@media screen and (max-width: 963px) {
-	.about__content {
-		flex-direction: column;
+@media screen and (max-width: 387px) {
+	.about__image {
+		max-width: 250px;
+		max-height: 250px;
 	}
+	/* 
+	.about__image img {
+		max-width: 400px;
+		transform: translateX(-43px) translateY(-10px);
+	} */
 
-	.image__container {
-		padding: 0;
-		margin-bottom: 30px;
-	}
-
-	.about__info {
-		text-align: center;
-		margin: 0 auto;
+	.about__image img {
+		max-width: 350px;
+		transform: translateX(-47px) translateY(-15px);
 	}
 }
