--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
 	--textcolor: #9a9a9a;
 	--headercolor: #efefef;
 	--featurecolor: #64f398;
 	--cardcolor: #36373b;
 	--unnamed-color-ffffff: #ffffff;
 	--backgroundcolor: #2d2e32;
-}
+} */
 
 .header {
 	text-align: center;
@@ -30,6 +30,8 @@
 
 	z-index: 100;
 	margin: 0 auto;
+
+	transform: translateX(-28px);
 }
 
 .header__nav li {
@@ -108,6 +110,38 @@
 	padding-bottom: 5px;
 }
 
+.outer {
+	background-color: var(--themebutton);
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5) translateX(15px);
+
+	z-index: 1;
+}
+
+.ball {
+	background-color: var(--featurecolor);
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+
+	transition: transform 0.2s linear;
+}
+
+.move {
+	transform: translateX(24px);
+}
+
 @media screen and (max-width: 414px) {
 	.header {
 		padding: 0 10px;
@@ -130,7 +164,7 @@
 
 		padding: 30px;
 		transform: translateX(-1000px);
-		transition: transform 0.5s ease-in-out;
+		transition: transform 0.4s ease-in-out;
 		z-index: 98;
 
 		box-shadow: 3px 0px 6px #00000029;
