--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .dark {
-	--textcolor: #9a9a9a;
+	--textcolor: #acacac;
 	--headercolor: #efefef;
 	--featurecolor: #64f398;
 	--cardcolor: #36373b;
