--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@
 }
 
 .dark {
-	--textcolor: #acacac;
-	--headercolor: #efefef;
+	--textcolor: #bdbdbd;
+	--headercolor: #ffffff;
 	--featurecolor: #64f398;
 	--cardcolor: #36373b;
 	--unnamed-color-ffffff: #ffffff;
@@ -37,6 +37,7 @@
 	margin: 0 auto;
 	padding: 0 60px;
 	background-color: var(--backgroundcolor);
+	overflow: hidden;
 }
 
 .container {
@@ -94,6 +95,7 @@ Link:visited {
 body {
 	background: var(--backgroundcolor);
 	font-family: Roboto, Montserrat;
+	/* overflow: hidden; */
 }
 
 .sideLine {
@@ -146,7 +148,132 @@ i {
 	color: var(--headercolor);
 }
 
-@media screen and (max-width: 820px) {
+.popup__container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgb(0, 0, 0, 0.7);
+	color: var(--textcolor);
+
+	z-index: 30;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	display: none;
+}
+
+.popup__content__container {
+	/* border: 1pc solid red; */
+	background-color: var(--backgroundcolor);
+	border-radius: 5px;
+	width: 90%;
+	height: 566px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	padding: 20px 30px;
+	position: relative;
+}
+
+.popup__content {
+	background-color: var(--backgroundcolor);
+	width: 99%;
+	height: 100%;
+	overflow-y: scroll;
+	display: flex;
+	justify-content: space-between;
+	/* padding: 40px 30px; */
+
+	position: relative;
+}
+
+.popup__info {
+	width: 50%;
+	padding: 20px 30px;
+}
+.popup__info > h2 {
+	color: var(--headercolor);
+	margin-bottom: 20px;
+}
+.popup__info > p {
+	min-width: 267px;
+	margin-bottom: 20px;
+}
+
+.popup__info > ul > li {
+	display: inline-block;
+	padding: 7px 10px;
+	margin-right: 15px;
+	border: 1px solid var(--featurecolor);
+	border-radius: 5px;
+	margin-bottom: 20px;
+}
+
+.popup__image {
+	margin-right: 5px;
+}
+
+.popup__image img {
+	width: 100%;
+	height: auto;
+}
+
+.btn__container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.btn__container i {
+	color: var(--backgroundcolor);
+}
+
+.btn {
+	background-color: var(--featurecolor);
+	padding: 20px;
+	border-radius: 50%;
+	margin: 20px 10px;
+}
+
+.exit__icon {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+}
+
+.popup__content::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: #f5f5f5;
+}
+
+.popup__content::-webkit-scrollbar {
+	width: 12px;
+	/* background-color: #f5f5f5; */
+}
+
+.popup__content::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: var(--featurecolor);
+	margin: 10px;
+}
+
+.showPopup {
+	display: flex;
+}
+
+.stopScroll {
+	overflow: hidden;
+}
+
+@media screen and (max-width: 846px) {
 	.sideSocials {
 		display: none;
 	}
@@ -158,5 +285,18 @@ i {
 	.container__container {
 		margin: 0 auto;
 		padding: 0 10px;
+		padding-right: 10px;
+	}
+
+	.popup__content {
+		flex-direction: column;
+	}
+
+	.popup__info {
+		width: 100%;
+	}
+
+	.popup__info > p {
+		width: 100%;
 	}
 }
