--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,23 @@
 .light {
-	--textcolor: #36373b;
-	--headercolor: #2d2e32;
-	--featurecolor: #5eb3f6;
-	--cardcolor: #fcfcfc;
-	--unnamed-color-ffffff: #ffffff;
-	--backgroundcolor: #ffffff;
-	--themebutton: rgb(228, 228, 228);
+  --textcolor: #36373b;
+  --headercolor: #2d2e32;
+  --featurecolor: #5eb3f6;
+  --cardcolor: #fcfcfc;
+  --unnamed-color-ffffff: #ffffff;
+  --backgroundcolor: #ffffff;
+  --themebutton: rgb(228, 228, 228);
 
-	background-color: var(--backgroundcolor);
+  background-color: var(--backgroundcolor);
 }
 
 .dark {
-	--textcolor: #bdbdbd;
-	--headercolor: #ffffff;
-	--featurecolor: #64f398;
-	--cardcolor: #36373b;
-	--unnamed-color-ffffff: #ffffff;
-	--backgroundcolor: #2d2e32;
-	--themebutton: #36373b;
+  --textcolor: #bdbdbd;
+  --headercolor: #ffffff;
+  --featurecolor: #64f398;
+  --cardcolor: #36373b;
+  --unnamed-color-ffffff: #ffffff;
+  --backgroundcolor: #2d2e32;
+  --themebutton: #36373b;
 }
 
 /* Router {
@@ -25,280 +25,280 @@
 } */
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .container__container {
-	width: 100%;
-	margin: 0 auto;
-	padding: 0 60px;
-	background-color: var(--backgroundcolor);
-	overflow: hidden;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 60px;
+  background-color: var(--backgroundcolor);
+  overflow: hidden;
 }
 
 .container {
-	max-width: 1200px;
-	margin: 0 auto;
-	/* margin-top: 60px; */
-	align-self: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  /* margin-top: 60px; */
+  align-self: center;
 }
 
 h1 {
-	font-size: 64px;
-	color: var(--headercolor);
+  font-size: 64px;
+  color: var(--headercolor);
 }
 
 h2 {
-	font-size: 32px;
-	color: var(--headercolor);
-	font-weight: normal;
+  font-size: 32px;
+  color: var(--headercolor);
+  font-weight: normal;
 }
 
 h3 {
-	font-size: 25px;
-	color: var(--headercolor);
-	font-weight: normal;
-	font-family: "Montserrat", "Roboto";
+  font-size: 25px;
+  color: var(--headercolor);
+  font-weight: normal;
+  font-family: "Inter", "Roboto";
 }
 
 p,
 li {
-	font-family: "Montserrat", "Roboto";
-	font-size: 16px;
-	list-style-type: none;
-	color: var(--textcolor);
+  font-family: "Inter", "Roboto";
+  font-size: 16px;
+  list-style-type: none;
+  color: var(--textcolor);
 }
 
 a {
-	color: var(--headercolor);
-	text-decoration: none;
+  color: var(--headercolor);
+  text-decoration: none;
 }
 
 a:visited {
-	color: var(--headercolor);
+  color: var(--headercolor);
 }
 
 Link {
-	color: var(--headercolor);
-	text-decoration: none;
-	cursor: pointer;
+  color: var(--headercolor);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 Link:visited {
-	color: var(--headercolor);
+  color: var(--headercolor);
 }
 
 body {
-	background: var(--backgroundcolor);
-	font-family: Roboto, Montserrat;
-	/* overflow: hidden; */
+  background: var(--backgroundcolor);
+  font-family: "Inter", "Roboto";
+  /* overflow: hidden; */
 }
 
 .sideLine {
-	width: 1px;
-	height: 105px;
-	content: "";
-	background-color: var(--headercolor);
-	margin-left: 9.1px;
+  width: 1px;
+  height: 105px;
+  content: "";
+  background-color: var(--headercolor);
+  margin-left: 9.1px;
 }
 
 .sideSocials {
-	position: fixed;
-	display: flex;
-	flex-direction: column;
-	bottom: 0;
-	left: 21px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  left: 21px;
 }
 
 .sideSocials li {
-	margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .right {
-	position: fixed;
-	bottom: 0;
-	right: 31px;
+  position: fixed;
+  bottom: 0;
+  right: 31px;
 }
 
 .sideEmail {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100px;
 }
 
 .sideEmail p {
-	transform: rotate(90deg);
-	position: fixed;
-	right: -76px;
-	bottom: 216px;
-	color: var(--headercolor);
+  transform: rotate(90deg);
+  position: fixed;
+  right: -76px;
+  bottom: 216px;
+  color: var(--headercolor);
 }
 
 li img {
-	object-fit: contain;
-	width: 19.71px;
+  object-fit: contain;
+  width: 19.71px;
 }
 
 i {
-	color: var(--headercolor);
+  color: var(--headercolor);
 }
 
 .popup__container {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	background-color: rgb(0, 0, 0, 0.7);
-	color: var(--textcolor);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0, 0, 0, 0.7);
+  color: var(--textcolor);
 
-	z-index: 30;
+  z-index: 30;
 
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-	display: none;
+  display: none;
 }
 
 .popup__content__container {
-	/* border: 1pc solid red; */
-	background-color: var(--backgroundcolor);
-	border-radius: 5px;
-	width: 90%;
-	max-width: 1200px;
-	height: 566px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  /* border: 1pc solid red; */
+  background-color: var(--backgroundcolor);
+  border-radius: 5px;
+  width: 90%;
+  max-width: 1200px;
+  height: 566px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-	padding: 20px 30px;
-	position: relative;
+  padding: 20px 30px;
+  position: relative;
 }
 
 .popup__content {
-	background-color: var(--backgroundcolor);
-	width: 99%;
-	height: 100%;
-	overflow-y: scroll;
-	display: flex;
-	justify-content: space-between;
-	/* padding: 40px 30px; */
+  background-color: var(--backgroundcolor);
+  width: 99%;
+  height: 100%;
+  overflow-y: scroll;
+  display: flex;
+  justify-content: space-between;
+  /* padding: 40px 30px; */
 
-	position: relative;
+  position: relative;
 }
 
 .popup__info {
-	width: 50%;
-	padding: 20px 30px;
+  width: 50%;
+  padding: 20px 30px;
 }
 .popup__info > h2 {
-	color: var(--headercolor);
-	margin-bottom: 20px;
+  color: var(--headercolor);
+  margin-bottom: 20px;
 }
 .popup__info > p {
-	min-width: 267px;
-	margin-bottom: 20px;
+  min-width: 267px;
+  margin-bottom: 20px;
 }
 
 .popup__info > ul > li {
-	display: inline-block;
-	padding: 7px 10px;
-	margin-right: 15px;
-	/* border: 1px solid var(--featurecolor); */
-	border-radius: 5px;
-	margin-bottom: 20px;
-	color: var(--backgroundcolor);
-	background-color: var(--featurecolor);
+  display: inline-block;
+  padding: 7px 10px;
+  margin-right: 15px;
+  /* border: 1px solid var(--featurecolor); */
+  border-radius: 5px;
+  margin-bottom: 20px;
+  color: var(--backgroundcolor);
+  background-color: var(--featurecolor);
 }
 
 .popup__image {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 
 .popup__image img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .btn__container {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .btn__container .icon {
-	color: var(--backgroundcolor);
+  color: var(--backgroundcolor);
 }
 
 .btn {
-	background-color: var(--featurecolor);
-	padding: 20px;
-	border-radius: 50%;
-	margin: 20px 10px;
+  background-color: var(--featurecolor);
+  padding: 20px;
+  border-radius: 50%;
+  margin: 20px 10px;
 }
 
 .exit__icon {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .popup__content::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	border-radius: 10px;
-	background-color: #f5f5f5;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
 }
 
 .popup__content::-webkit-scrollbar {
-	width: 12px;
-	/* background-color: #f5f5f5; */
+  width: 12px;
+  /* background-color: #f5f5f5; */
 }
 
 .popup__content::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background-color: var(--featurecolor);
-	margin: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--featurecolor);
+  margin: 10px;
 }
 
 .showPopup {
-	display: flex;
+  display: flex;
 }
 
 .stopScroll {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 846px) {
-	.sideSocials {
-		display: none;
-	}
+  .sideSocials {
+    display: none;
+  }
 
-	.sideEmail {
-		display: none;
-	}
+  .sideEmail {
+    display: none;
+  }
 
-	.container__container {
-		margin: 0 auto;
-		padding: 0 10px;
-		padding-right: 10px;
-	}
+  .container__container {
+    margin: 0 auto;
+    padding: 0 10px;
+    padding-right: 10px;
+  }
 
-	.popup__content {
-		flex-direction: column;
-	}
+  .popup__content {
+    flex-direction: column;
+  }
 
-	.popup__info {
-		width: 100%;
-	}
+  .popup__info {
+    width: 100%;
+  }
 
-	.popup__info > p {
-		width: 100%;
-	}
+  .popup__info > p {
+    width: 100%;
+  }
 }
